[tool.poetry]
name = "Reeftor_brain_games"
version = "0.5.2"
description = "Hexlet.io brain games python project"
authors = ["Reeftor <dll1993@bk.ru>"]
repository =  "https://github.com/Reeftor/python-project-lvl1"
classifiers = [
    "Topic :: Education"
]
packages = [
    { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "3.8.2"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
